--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Welcome to OpenShift</title>
 </head>
 <body>
-    <h1>Hello nginx with tagged version
+    <h1>Hello nginx with tagged version 1.0.2
 	<br>OpenShift with Jenkins!
     </h1>
 </body>
